[CHG] $unlink now returns an unlinked Hash instead of an object when a Hash is passed in.